// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelineProgressPanel > matches snapshot in dark mode 1`] = `
<div>
  <div
    class="dark bg-slate-900 p-4"
  >
    <div
      class="glass-card rounded-xl text-card-foreground transition-neo hover-lift w-full"
    >
      <div
        class="flex flex-col p-6 space-y-3 pb-4"
      >
        <div
          class="flex flex-wrap items-center justify-between gap-3"
        >
          <div
            class="flex flex-col gap-1"
          >
            <h3
              class="heading-md font-display tracking-tight text-foreground text-base font-semibold"
            >
              Write Emails
            </h3>
            <div
              class="flex flex-wrap items-center gap-2 text-xs text-muted-foreground"
            >
              <span
                class="inline-flex items-center gap-1 rounded-full bg-muted px-2 py-1 text-[11px] font-medium"
              >
                <svg
                  class="lucide lucide-sparkles h-3 w-3 text-amber-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                  />
                  <path
                    d="M20 3v4"
                  />
                  <path
                    d="M22 5h-4"
                  />
                  <path
                    d="M4 17v2"
                  />
                  <path
                    d="M5 18H3"
                  />
                </svg>
                AI personalization
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 text-[11px] bg-emerald-100 text-emerald-700 dark:bg-emerald-950/40 dark:text-emerald-200"
            >
              Healthy
            </div>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-neo focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow-soft-outer hover:bg-accent/20 backdrop-blur-sm rounded-md h-8 px-2 border border-genniBlue/30 bg-gradient-to-r from-genniBlue/5 to-genniIndigo/5 hover:from-genniBlue/10 hover:to-genniIndigo/10 text-genniBlue hover:text-genniIndigo transition-all duration-200"
            >
              Expand
              <svg
                class="lucide lucide-chevron-down ml-1 h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Pipeline stage 
          Write Emails
        </div>
      </div>
      <div
        class="p-6 space-y-6 pt-0"
      >
        <div
          class="rounded-lg border border-dashed border-border/70 bg-muted/20 px-3 py-2 text-sm text-muted-foreground"
        >
          Pipeline details are collapsed. Expand to view stage flow, metrics, and activity.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineProgressPanel > matches snapshot in light mode 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="glass-card rounded-xl text-card-foreground transition-neo hover-lift w-full"
    >
      <div
        class="flex flex-col p-6 space-y-3 pb-4"
      >
        <div
          class="flex flex-wrap items-center justify-between gap-3"
        >
          <div
            class="flex flex-col gap-1"
          >
            <h3
              class="heading-md font-display tracking-tight text-foreground text-base font-semibold"
            >
              Write Emails
            </h3>
            <div
              class="flex flex-wrap items-center gap-2 text-xs text-muted-foreground"
            >
              <span
                class="inline-flex items-center gap-1 rounded-full bg-muted px-2 py-1 text-[11px] font-medium"
              >
                <svg
                  class="lucide lucide-sparkles h-3 w-3 text-amber-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                  />
                  <path
                    d="M20 3v4"
                  />
                  <path
                    d="M22 5h-4"
                  />
                  <path
                    d="M4 17v2"
                  />
                  <path
                    d="M5 18H3"
                  />
                </svg>
                AI personalization
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 text-[11px] bg-emerald-100 text-emerald-700 dark:bg-emerald-950/40 dark:text-emerald-200"
            >
              Healthy
            </div>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-neo focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow-soft-outer hover:bg-accent/20 backdrop-blur-sm rounded-md h-8 px-2 border border-genniBlue/30 bg-gradient-to-r from-genniBlue/5 to-genniIndigo/5 hover:from-genniBlue/10 hover:to-genniIndigo/10 text-genniBlue hover:text-genniIndigo transition-all duration-200"
            >
              Expand
              <svg
                class="lucide lucide-chevron-down ml-1 h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Pipeline stage 
          Write Emails
        </div>
      </div>
      <div
        class="p-6 space-y-6 pt-0"
      >
        <div
          class="rounded-lg border border-dashed border-border/70 bg-muted/20 px-3 py-2 text-sm text-muted-foreground"
        >
          Pipeline details are collapsed. Expand to view stage flow, metrics, and activity.
        </div>
      </div>
    </div>
  </div>
</div>
`;
